--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ buildscript {
     }
 }
 
+plugins {
+    id 'org.jmailen.kotlinter' version '1.8.2'
+}
+
 group 'com.terarion'
 version '1.0-SNAPSHOT'
 
