--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,8 @@
 version: '3'
+volumes:
+  database:
+  ldap-data:
+  ldap-conf:
 services:
   db:
     image: postgres:alpine
@@ -9,4 +13,14 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - '.docker/db:/var/lib/postgresql/data'
+      - 'database:/var/lib/postgresql/data'
+  ldap:
+    image: dinkel/openldap
+    environment:
+      - SLAPD_PASSWORD=haraka
+      - SLAPD_DOMAIN=com.terarion
+    volumes:
+      - 'ldap-data:/var/lib/ldap'
+      - 'ldap-conf:/etc/ldap'
+    ports:
+      - '389:389'
