--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ apply plugin: "kotlin-allopen"
 apply plugin: "kotlin-noarg"
 apply plugin: 'war'
 
+configurations {
+    ktlint
+}
+
 allOpen {
     annotation("javax.ejb.Stateless")
     annotation("javax.persistence.Entity")
@@ -37,6 +41,23 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
+}
+
+task ktlint(type: JavaExec, group: "verification") {
+    description = "Check Kotlin code style."
+    classpath = configurations.ktlint
+    main = "com.github.shyiko.ktlint.Main"
+    args "src/**/*.kt"
+    
+}
+check.dependsOn ktlint
+
+task ktlintFormat(type: JavaExec, group: "formatting") {
+    description = "Fix Kotlin code style deviations."
+    classpath = configurations.ktlint
+    main = "com.github.shyiko.ktlint.Main"
+    args "-F", "src/**/*.kt"
 }
 
 dependencies {
@@ -48,6 +69,7 @@ dependencies {
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile "com.nhaarman:mockito-kotlin:1.5.0"
+    ktlint "com.github.shyiko:ktlint:0.18.0"
 }
 
 compileKotlin {
