--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'kotlin-platform-jvm'
+apply plugin: 'kotlin-jpa'
 apply plugin: "kotlin-allopen"
 apply plugin: "kotlin-noarg"
 apply plugin: 'war'
