--- a/build.gradle
+++ b/build.gradle
@@ -31,12 +31,14 @@ allOpen {
     annotation("javax.ejb.Stateless")
     annotation("javax.persistence.Entity")
     annotation("javax.ejb.Singleton")
+    annotation("util.Open")
 }
 
 noArg {
     annotation("javax.ejb.Stateless")
     annotation("javax.persistence.Entity")
     annotation("javax.ejb.Singleton")
+    annotation("util.Open")
 }
 
 sourceCompatibility = 1.8
@@ -67,6 +69,7 @@ dependencies {
     compile group: 'joda-time', name: 'joda-time', version: '2.9.9'
     compile group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.4'
+    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.26'
     compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
     providedCompile group: 'javax', name: 'javaee-api', version: '8.0'
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
