--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlin_version"
+        classpath 'org.jboss.arquillian.gradle:arquillian-gradle-plugin:0.1'
         classpath 'com.palantir:jacoco-coverage:0.4.0'
     }
 }
@@ -22,6 +23,7 @@ apply plugin: 'kotlin-jpa'
 apply plugin: "kotlin-allopen"
 apply plugin: "kotlin-noarg"
 apply plugin: 'war'
+apply plugin: 'arquillian'
 
 configurations {
     ktlint
