--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,7 @@
         </web-resource-collection>
         <auth-constraint>
             <role-name>regular_role</role-name>
+            <role-name>admin_role</role-name>
         </auth-constraint>
     </security-constraint>
 </web-app>
