--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,20 @@ repositories {
     jcenter()
 }
 
+sourceSets {
+    integrationTest {
+        java.srcDir file('src/integration/kotlin')
+        compileClasspath += main.output + test.output
+        runtimeClasspath += main.output + test.output
+        resources.srcDir file('src/integration/resources')
+    }
+}
+
+task integrationTest(type: Test) {
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
+    classpath = sourceSets.integrationTest.runtimeClasspath
+}
+
 task ktlint(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
     classpath = configurations.ktlint
@@ -76,6 +90,10 @@ dependencies {
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile "com.nhaarman:mockito-kotlin:1.5.0"
+    integrationTestCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
+    integrationTestCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+    integrationTestCompile group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.5.0'
+    integrationTestCompile group: 'org.postgresql', name: 'postgresql', version: '42.2.1'
     ktlint "com.github.shyiko:ktlint:0.18.0"
 }
 
