--- a/build.gradle
+++ b/build.gradle
@@ -89,12 +89,14 @@ dependencies {
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-junit', version: '2.0.0.0'
     testCompile "com.nhaarman:mockito-kotlin:1.5.0"
     integrationTestCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     integrationTestCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
     integrationTestCompile group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.5.0'
     integrationTestCompile group: 'org.postgresql', name: 'postgresql', version: '42.2.1'
     integrationTestCompile 'io.rest-assured:rest-assured:3.0.7'
+    integrationTestCompile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
     ktlint "com.github.shyiko:ktlint:0.18.0"
 }
 
