--- a/build.gradle
+++ b/build.gradle
@@ -33,14 +33,14 @@ allOpen {
     annotation("javax.ejb.Stateless")
     annotation("javax.persistence.Entity")
     annotation("javax.ejb.Singleton")
-    annotation("util.Open")
+    annotation("utils.Open")
 }
 
 noArg {
     annotation("javax.ejb.Stateless")
     annotation("javax.persistence.Entity")
     annotation("javax.ejb.Singleton")
-    annotation("util.Open")
+    annotation("utils.Open")
 }
 
 sourceCompatibility = 1.8
