--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ allOpen {
     annotation("javax.ejb.Stateless")
     annotation("javax.persistence.Entity")
     annotation("javax.ejb.Singleton")
+    annotation("javax.ws.rs.Path")
     annotation("utils.Open")
 }
 
@@ -40,6 +41,7 @@ noArg {
     annotation("javax.ejb.Stateless")
     annotation("javax.persistence.Entity")
     annotation("javax.ejb.Singleton")
+    annotation("javax.ws.rs.Path")
     annotation("utils.Open")
 }
 
@@ -88,6 +90,11 @@ dependencies {
     compile group: 'org.primefaces', name: 'primefaces', version: '6.0'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
     compile group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.7.25'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.4'
+    compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.26'
+    compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.26'
+    compile group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '2.26'
     providedCompile group: 'javax', name: 'javaee-api', version: '8.0'
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
